--- a/js-stopwatch.html
+++ b/js-stopwatch.html
@@ -3,98 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timer</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-        }
-        input[type="number"] {
-            width: 40px;
-            text-align: center;
-        }
-        #buttons {
-            margin-top: 20px;
-        }
-    </style>
+    <title>Stopwatch</title>
 </head>
+<style>
+    *{
+        margin: 0px;
+        padding: 0px;
+        font-family: cursive;
+        box-sizing: border-box;
+    }
+    body{
+        background-color: azure;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .box{
+        background-color: white;
+        height: fit-content;
+        width: fit-content;
+        padding: 50px;
+        border-radius: 60px 10px 60px 10px;
+    }
+    .heading{
+        color: #ca2c2c;
+        text-align: center;
+    }
+    h1{
+        font-size: 50px;
+    }
+    button{
+        border: none;
+        outline: none;
+        font-size: 20px;
+        padding: 15px;
+        border-radius: 5px;
+        margin: 15px;
+        color: white;
+    }
+</style>
 <body>
-    <h1>JS Timer</h1>
-    <div>
-        <label for="hours">Hours: </label>
-        <input type="number" id="hours" min="0">
-        <label for="minutes">Minutes: </label>
-        <input type="number" id="minutes" min="0" max="59">
-        <label for="seconds">Seconds: </label>
-        <input type="number" id="seconds" min="0" max="59">
+    <div class="box">
+        <h2 class="heading">Stopwatch</h2>
+        <h1 id="stopwatch">00 : 00 : 00</h1>
+        <button onclick="start()" style="background-color: blue;">start</button>
+        <button onclick="stop()" style="background-color: green;">stop</button>
+        <button onclick="reset()" style="background-color: #ca2c2c;">reset</button>
     </div>
-    <div id="timer">00:00:00</div>
-    <div id="buttons">
-        <button onclick="startTimer()">Start</button>
-        <button onclick="pauseTimer()">Pause</button>
-        <button onclick="resetTimer()">Reset</button>
-    </div>
-
-    <script>
-
-
-        let timerDisplay = document.getElementById("timer");
-        let hoursInput = document.getElementById("hours");
-        let minutesInput = document.getElementById("minutes");
-        let secondsInput = document.getElementById("seconds");
-        let intervalId;
-        let totalSeconds = 0;
-        let isRunning = false;
-
-        function startTimer() {
-            if (!isRunning) {
-                totalSeconds = parseInt(hoursInput.value) * 3600 + parseInt(minutesInput.value) * 60 + parseInt(secondsInput.value);
-                intervalId = setInterval(updateTimer, 1000);
-                isRunning = true;
-                disableInputs(true);
-            }
-        }
- 
-        function pauseTimer() {
-            if (isRunning) {
-                clearInterval(intervalId);
-                isRunning = false;
-                disableInputs(false);
-            }
-        }
-
-        function resetTimer() {
-            pauseTimer();
-            totalSeconds = 0;
-            updateTimerDisplay();
-            disableInputs(false);
-        }
-
-        function updateTimer() {
-            if (totalSeconds > 0) {
-                totalSeconds--;
-                updateTimerDisplay();
-            } else {
-                pauseTimer();
-            }
-        }
-
-        function updateTimerDisplay() {
-            const hours = Math.floor(totalSeconds / 3600);
-            const minutes = Math.floor((totalSeconds % 3600) / 60);
-            const seconds = totalSeconds % 60;
-            timerDisplay.textContent = `${formatTime(hours)}:${formatTime(minutes)}:${formatTime(seconds)}`;
-        }
-
-        function formatTime(time) {
-            return time < 10 ? `0${time}` : time;
-        }
-
-        function disableInputs(disabled) {
-            hoursInput.disabled = disabled;
-            minutesInput.disabled = disabled;
-            secondsInput.disabled = disabled;
-        }
-    </script>
 </body>
 </html>
+<script>
+    var isStop = true; 
+    var sec = 0;
+    var min =0;
+    var hr =0;
+
+    function start(){
+        if(isStop == true){
+            isStop = false;
+            timer();
+        }
+    }
+    function timer(){
+        if(isStop == false){
+
+            sec = parseInt(sec);
+            min = parseInt(min);
+            hr = parseInt(hr);
+
+
+            sec ++;
+            if(sec == 60){
+                s = 0;
+                min++;
+           }
+           if(min == 60){
+              min =0;
+              hr++
+           }
+           if(sec <10){
+            sec = "0" + sec
+           }
+
+           if(min<10){
+            min = "0" + min
+           }
+
+           if(hr <10){
+            hr = "0" + hr
+           }
+           stopwatch.innerHTML = hr + " : " + min + " : " + sec;
+           setTimeout("timer()",1000)
+
+        }
+               
+}
+function stop(){
+    isStop = true;
+}
+
+function reset(){
+    isStop = true
+    sec = 0;
+    min = 0;
+    hr = 0;
+
+    stopwatch.innerHTML = "00 : 00 : 00"
+}
+</script>
